--- a/weekly/01A.md
+++ b/weekly/01A.md
@@ -21,7 +21,7 @@
   - Project 2 - app front/back end (MongoDB database)
 - Attendance/Introductions
   - Tell us something - your major, where are you from? had any good co-ops?
-  - Meet at least 3 of you classmates
+  - Say Hi to at least 3 of your classmates!
 
  ---
   
