--- a/weekly/01A.md
+++ b/weekly/01A.md
@@ -17,8 +17,8 @@
   - node package manager (npm)
   - deploying to Heroku, CI (continuous integration)
   - data storage 
-  - Project 1 - app back end (JSON "database")
-  - Project 2 - app front/back end (MongoDB database)
+  - Project 1 - app back-end (JSON "database")
+  - Project 2 - app front/back-end (MongoDB database)
 - Attendance/Introductions
   - Tell us something - your major, where are you from? had any good co-ops?
   - Say Hi to at least 3 of your classmates!
