--- a/weekly/01A.md
+++ b/weekly/01A.md
@@ -5,7 +5,7 @@
 - [Read Syllabus](../syllabus.md)
   - Questions?
 - What's the course about?
-  - Mostly, client/server application development (aka "Full Stack") utilizing the MERN stack (Mongo, Express, React, Nodejs)
+  - Mostly, client/server application development (aka "Full Stack") utilizing the **MERN** stack (Mongo, Express, React, Nodejs)
   - Also, deployment to [PaaS ("Platform as a service")](https://azure.microsoft.com/en-us/resources/cloud-computing-dictionary/what-is-paas) provider [Heroku](https://www.heroku.com/platform) utilizing CI/CD ("continuous integration"/"contimnuous delivery")
 - Review & Intro (weeks 1 & 2)
   - Review Vanilla JS (DOM, events, XHR, fetch)
