--- a/weekly/01A.md
+++ b/weekly/01A.md
@@ -12,12 +12,12 @@
   - HTTP protocol - methods & headers mostly
   - Utilizing PHP scripts on banjo (a Unix box) - ftp and ssh
   - Creating a read/write API with node.js and json-server
-  - Initial API Design 
+    - you should now have a good idea what a properly designed API looks like
 - Node.js server development (weeks 3+)
   - node package manager (npm)
   - deploying to Heroku, CI (continuous integration)
   - data storage 
-  - Project 1 - app back-end (JSON "database")
+  - Project 1 - your own custom app back-end (JSON "database")
   - Project 2 - app front/back-end (MongoDB database)
 - Attendance/Introductions
   - Tell us something - your major, where are you from? had any good co-ops?
