--- a/weekly/01A.md
+++ b/weekly/01A.md
@@ -7,15 +7,16 @@
 - What's the course about?
   - Mostly, client/server application development (aka "Full Stack") utilizing the **MERN** stack (Mongo, Express, React, Nodejs)
   - Also, deployment to [PaaS ("Platform as a service")](https://azure.microsoft.com/en-us/resources/cloud-computing-dictionary/what-is-paas) provider [Heroku](https://www.heroku.com/platform) utilizing CI/CD ("continuous integration"/"contimnuous delivery")
-- We are doing --> Review & Intro (weeks 1 & 2)
+- We are doing --> Review & Intro to back-ends (weeks 1 & 2)
   - Review Vanilla JS (DOM, events, XHR, fetch)
   - HTTP protocol - methods & headers mostly
   - Utilizing PHP scripts on banjo (a Unix box) - ftp and ssh
   - Creating a read/write API with node.js and json-server
     - you should now have a good idea what a properly designed API looks like
+  - Vertical scaling
 - We are doing --> Node.js server development (weeks 3+)
   - node package manager (npm)
-  - deploying to Heroku, CI (continuous integration)
+  - deploying to Heroku PaaS, Horizontal scaling, CI (continuous integration)
   - data storage 
   - Project 1 - your own custom app back-end (JSON "database")
   - Project 2 - app front/back-end (MongoDB database)
