--- a/weekly/01A.md
+++ b/weekly/01A.md
@@ -36,4 +36,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   :-\  |  [**IGME-430 Home**](../) | Week 1B Notes
+|   :-\  |  [**IGME-430 Home**](../) | [**Week 1B Notes**](01B.md)
