--- a/weekly/01B.md
+++ b/weekly/01B.md
@@ -1,6 +1,10 @@
 # Week 1B
 
 ## I. Today's Activities
+- Questions about course?
+- Review [1 - Ajax (XHR) Review](../exercises/1-ajax-review.md)
+  - a couple of ways to do the "card"
+  - demo of parameter destructuring in `quoteComponent` function
 
 
  ---
