--- a/weekly/01B.md
+++ b/weekly/01B.md
@@ -10,7 +10,8 @@
  ---
   
 ## II. Today's Exercise & HW
-
+- You installed [Postman](https://www.postman.com/), right? We're using it today.
+- [2 - Ajax, Web Services, HTTP Headers (Accept & Content-type)](../exercises/2-ajax-web-services-accept-headers.md)
 - See myCourses dropbox for submission instructions!
 
 ---
