--- a/weekly/01B.md
+++ b/weekly/01B.md
@@ -15,8 +15,9 @@
   - [Ajax-5 - the `fetch()` API](https://github.com/tonethar/IGME-330-Master/blob/master/notes/HW-ajax-5.md)
   - [Ajax-6 - `async` & `await` with the `fetch()` API](https://github.com/tonethar/IGME-330-Master/blob/master/notes/HW-ajax-6.md)
   - [Ajax-7 - JavaScript Promises](https://github.com/tonethar/IGME-330-Master/blob/master/notes/HW-ajax-7.md)
-- [2 - Ajax, Web Services, HTTP Headers (Accept & Content-type)](../exercises/2-ajax-web-services-accept-headers.md)
-- See myCourses dropbox for submission instructions!
+- Today's notes and HW
+  - [2 - Ajax, Web Services, HTTP Headers (Accept & Content-type)](../exercises/2-ajax-web-services-accept-headers.md)
+  - See myCourses dropbox for submission instructions!
 
 ---
 ---
