--- a/weekly/01B.md
+++ b/weekly/01B.md
@@ -24,4 +24,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 1A Notes**](01A.md)  |  [**IGME-430 Home**](../) | Week 2A Notes
+|   [**Week 1A Notes**](01A.md)  |  [**IGME-430 Home**](../) | [**Week 2A Notes**](02A.md)
