--- a/weekly/02A.md
+++ b/weekly/02A.md
@@ -13,13 +13,13 @@
 ## II. Today's Activities
 - Finish up:
   - [2 - Ajax, Web Services, HTTP Headers (Accept & Content-type)](../exercises/2-ajax-web-services-accept-headers.md)
-  - ... still need to talk about `ssh`, plus a `telnet` demo of an HTTP request, and a quick look at those `fetch()` and `Promise` notes
-- New Stuff
+  - ... still need to talk about `ssh`, plus a `telnet` demo of an HTTP request to an HTTP server, and a quick look at those `fetch()` and `Promise` notes
+- New Stuff:
   - [3 - Web services & Query Strings (Demo)](../exercises/3-web-service-query-string.md)
   - ... not too much new here - primarily it's about passing data to a web service using the *query string*, in this case the number of random quotes we want back
     - https://people.rit.edu/~acjvks/fall-2024/services/random-jokes.php
     - https://people.rit.edu/~acjvks/fall-2024/services/random-jokes.php?limit=5
-    - the *query string* is another popular way to pass *parameters* to a web service (remember how we can think of web services as "always-on cloud functions"?
+    - the *query string* is another popular way to pass *parameters* to a web service - *remember how we can think of web services as "always-on cloud functions"?*
     - https://en.wikipedia.org/wiki/Query_string
   - [4 - Exploring HTTP methods with json-server](../exercises/4-http-methods-with-json-server.md)
 
