--- a/weekly/02A.md
+++ b/weekly/02A.md
@@ -1,8 +1,8 @@
 # Week 2A
 
 # I. Review
-- Last time we looked at having our quotes-app hit a PHP *web service* that returned a single random quote:
-  - THis approach is much more efficient than what we did with quotes-app-1, which was to download ALL the quotes from a JSON file and then random ly choose 1. Imagine how iefficient such an approach would be if we had a databse of 5000 quotes!
+- Last time we looked at having our **quotes-app-2** hit a PHP *web service* that returned a single random quote:
+  - This approach is much more efficient than what we did with **quotes-app-1**, which was to download ALL the quotes from a JSON file and then random ly choose 1. Imagine how iefficient such an approach would be if we had a databse of 5000 quotes!
   - The  first PHP script ([quote-random.php](https://people.rit.edu/~acjvks/fall-2024/services/quote/quote-random.php)) sent HTTP *response headers* (for CORS and Content-Type)
   - The  second PHP script ([quote-random-json-or-text.php](https://people.rit.edu/~acjvks/fall-2024/services/quote/quote-random-json-or-text.php)) also looked at *request headers* (thjose sent by the client) and then sent back content depending on what the value of the `Accept` header was
 - In the quote-app code, we saw how to add *request headers* to `XHR` and `fetch()` requests - request headers are one way that a browser can send information (in this case, about the web service call) to a web service
