--- a/weekly/01B.md
+++ b/weekly/01B.md
@@ -11,7 +11,7 @@
   
 ## II. Today's Exercise & HW
 - You installed [Postman](https://www.postman.com/), right? We're using it today.
-- We'll be switching the quote app code fropm XHR to fetch() today - here are some notes on fetch() and promises that you can reference - we will also see promises later on in the semester when we work with MongoDB. (BTW - these pages are from 330, and they are NOT 430 HW assignments):
+- We'll be switching the quote app code fropm XHR to `fetch()` today - here are some notes on `fetch()` and promises that you can reference - we will also see promises later on in the semester when we work with MongoDB. (BTW - these pages are from 330, and they are NOT 430 HW assignments):
   - [Ajax-5 - the `fetch()` API](https://github.com/tonethar/IGME-330-Master/blob/master/notes/HW-ajax-5.md)
   - [Ajax-6 - `async` & `await` with the `fetch()` API](https://github.com/tonethar/IGME-330-Master/blob/master/notes/HW-ajax-6.md)
   - [Ajax-7 - JavaScript Promises](https://github.com/tonethar/IGME-330-Master/blob/master/notes/HW-ajax-7.md)
