--- a/weekly/02A.md
+++ b/weekly/02A.md
@@ -22,7 +22,7 @@
     - https://people.rit.edu/~acjvks/fall-2024/services/random-jokes.php?limit=5
     - the *query string* is another popular way to pass *parameters* to a web service - *remember how we can think of web services as "always-on cloud functions"?*
     - https://en.wikipedia.org/wiki/Query_string
-  - [4 - Exploring HTTP methods with json-server](../exercises/4-http-methods-with-json-server.md)
+  - [4 - Exploring HTTP methods with `json-server`](../exercises/4-http-methods-with-json-server.md)
 
 
   
