--- a/weekly/02A.md
+++ b/weekly/02A.md
@@ -32,4 +32,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 1B Notes**](01B.md)  |  [**IGME-430 Home**](../) | Week 2B Notes
+|   [**Week 1B Notes**](01B.md)  |  [**IGME-430 Home**](../) | [**Week 2B Notes**](02B.md)
