--- a/weekly/02A.md
+++ b/weekly/02A.md
@@ -17,7 +17,7 @@
   - ... still need to talk about `ssh`, plus a `telnet` demo of an HTTP request to an HTTP server, and a quick look at those `fetch()` and `Promise` notes
 - New Stuff:
   - [3 - Web services & Query Strings (Demo)](../exercises/3-web-service-query-string.md)
-  - ... not too much new here - primarily it's about passing data to a web service using the *query string*, in this case the number of random quotes we want back
+  - ... not too much new here - primarily it's about passing data to a web service using the *query string*, in this case the number of random JOKES we want back
     - https://people.rit.edu/~acjvks/fall-2024/services/random-jokes.php
     - https://people.rit.edu/~acjvks/fall-2024/services/random-jokes.php?limit=5
     - the *query string* is another popular way to pass *parameters* to a web service - *remember how we can think of web services as "always-on cloud functions"?*
