--- a/weekly/03A.md
+++ b/weekly/03A.md
@@ -7,17 +7,20 @@
 - "no code/low code" solution easy to spin up
 - HTTP methods supported: GET/POST/PUT/PATCH/DELETE
 - Simple searching functionality supported via query string
-- Persists changes
+- Persists changes to JSON file
 
 ### Minuses
 
-- "no code" means that 
-- "no code" means we can't validate data on server-side 
+- "no code" means that even a simple `/quotes/random` endpoint can't be written
+- "no code" means we can't validate data on server-side
+- data file must be JSON
+- we can only send JSON formatted text to the service, not URL encoded data, binary data etc
 
 
 ---
 
-## II. HTTP Headers
+## II. HTTP Ref
+- https://en.wikipedia.org/wiki/HTTP#HTTP/1.1_request_messages
 - https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers
 
 ---
