--- a/weekly/03A.md
+++ b/weekly/03A.md
@@ -1,6 +1,12 @@
 # Week 3A
 
-## I. Review **quotes-server**
+## I. Quiz & HTTP Ref
+- https://en.wikipedia.org/wiki/HTTP#HTTP/1.1_request_messages
+- https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers
+
+---
+
+## II. Review **quotes-server**
 
 ### Pluses
 
@@ -17,12 +23,36 @@
 - we were creating and sending a guid and time stamps on the client,  and then sending them to the serverto the server ...
   - normally, the guid and timestamps would be instead be created on the server, NOT on the client
 
+---
+
+##  III. `first-node` 
+
+- We will begin to explore how to set up an `http` server utilizing NodeJS
+  - we won't get too far on this today - will complete it next time!
+
+### Get started
+
+- Create a **first-node** folder somewhere on your desktop
+- Open the **first-node** folder up in VSCode
+- Open the VSCode terminal - and make sure that the terminal type is *GitBash*
+- Type `npm init -y`
+- Create an **src** directory
+- Create **src/server.js**
+- Add `console.log("Hello World")` to the top of **server.js**
+- Type `node src/server.js` to check the console for the "Hello World" log
+- In **package.json**, replace "test" with a "start" script:
+  - `"start": "node src/server.js"`
+- Test this by typing `npm start` - you should see the log in the console.
+
+### Keep going
+- We will be looking at:
+  - the built-in `http` library
+  - multiple script files
+  - importing/exporting scripts
 
 ---
 
-## II. HTTP Ref
-- https://en.wikipedia.org/wiki/HTTP#HTTP/1.1_request_messages
-- https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers
+## IV. 
 
 ---
 ---
