--- a/weekly/03A.md
+++ b/weekly/03A.md
@@ -52,7 +52,9 @@
 
 ---
 
-## IV. 
+## IV. Homework
+- You should have done this already - I'm not collecting it - but if you don't set up GitHub and Heroku you're not going to get much further in this class --> [1 - Git & Heroku Setup](../exercises/1-git-and-heroku-setup.md)
+- [2 - Heroku Test](../exercises/2-heroku-test.md) - time allowing I will do a quick demo of this - suggestion: just "wacth and learn", don't try to follow along
 
 ---
 ---
