--- a/weekly/03A.md
+++ b/weekly/03A.md
@@ -46,7 +46,7 @@
 
 ### Keep going
 - We will be looking at:
-  - the built-in `http` library
+  - serving pages with the built-in `http` library
   - multiple script files
   - importing/exporting scripts
 
