--- a/weekly/03A.md
+++ b/weekly/03A.md
@@ -20,8 +20,8 @@
 - "no code" means that even a simple `/quotes/random` endpoint can't be written
 - "no code" means we can't validate any of the submitted quote data on the server-side
 - we can only send JSON formatted text to the service, not form URL encoded data, binary data etc
-- we were creating and sending a guid and time stamps on the client,  and then sending them to the serverto the server ...
-  - normally, the guid and timestamps would be instead be created on the server, NOT on the client
+- we were creating and sending a guid and time stamps on the *client*,  and then sending them to the *server* ...
+  - BUT normally, the guid and timestamps would be instead be created on the server, NOT on the client
 
 ---
 
