--- a/weekly/03A.md
+++ b/weekly/03A.md
@@ -10,17 +10,17 @@
 
 ### Pluses
 
-- "no code/low code" solution easy to spin up
+- "No code/low code" solution easy to spin up
 - HTTP methods supported: GET/POST/PUT/PATCH/DELETE
 - Simple searching functionality supported via query string
 - Persists changes to JSON file
 
 ### Minuses
-- data file must be JSON
-- "no code" means that even a simple `/quotes/random` endpoint can't be written
-- "no code" means we can't validate any of the submitted quote data on the server-side
-- we can only send JSON formatted text to the service, not form URL encoded data, binary data etc
-- we were creating and sending a guid and time stamps on the *client*,  and then sending them to the *server* ...
+- Data file must be JSON
+- "No code" means that even a simple `/quotes/random` endpoint can't be written
+- "No code" means we can't validate any of the submitted quote data on the server-side
+- We can only send JSON formatted text to the service, not form URL encoded data, binary data etc
+- We were creating and sending a guid and time stamps on the *client*,  and then sending them to the *server* ...
   - BUT normally, the guid and timestamps would be instead be created on the server, NOT on the client
 
 ---
