--- a/weekly/03A.md
+++ b/weekly/03A.md
@@ -1,6 +1,6 @@
 # Week 3A
 
-## I. Quiz & HTTP Ref
+## I. Practice Quiz & HTTP Ref
 - https://en.wikipedia.org/wiki/HTTP#HTTP/1.1_request_messages
 - https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers
 
