--- a/weekly/03A.md
+++ b/weekly/03A.md
@@ -1,6 +1,7 @@
 # Week 3A
 
 ## I. Practice Quiz & HTTP Ref
+- [Practice Quiz #1](../assessment/practice-quiz-1.md)
 - https://en.wikipedia.org/wiki/HTTP#HTTP/1.1_request_messages
 - https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers
 
