--- a/weekly/03B.md
+++ b/weekly/03B.md
@@ -1,7 +1,7 @@
 # Week 3B
 
 ## I. Housekeeping
-- How are the Heroku "credits" coming?
+- How are the Heroku "credits", [1 - Git & Heroku Setup](../exercises/1-git-and-heroku-setup.md) and [2 - Heroku Test](../exercises/2-heroku-test.md) coming?
 - Let's check out the Slack channels
 - Now posted -> [Partial Practice Quiz #1 Key](../assessment)
 
@@ -13,7 +13,8 @@
 
 ---
 
-## III. 
+## III. HW: *Simple HTTP Server*
+- See myCourses Content/Assignments for the PDF
 
 ---
 ---
