--- a/weekly/03B.md
+++ b/weekly/03B.md
@@ -9,7 +9,10 @@
 
 ## II. Finish up `first-node`
 - CommonJS modules
-- [nodemon](https://www.npmjs.com/package/nodemon)
+  - https://nodejs.org/api/modules.html#modules-commonjs-modules
+  - https://blog.logrocket.com/commonjs-vs-es-modules-node-js
+- Automatic server re-booting on file chnages:
+  - [nodemon](https://www.npmjs.com/package/nodemon)
 
 ---
 
