--- a/weekly/03A.md
+++ b/weekly/03A.md
@@ -62,4 +62,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 2B Notes**](02B.md)  |  [**IGME-430 Home**](../) | Week 3B Notes
+|   [**Week 2B Notes**](02B.md)  |  [**IGME-430 Home**](../) | [**Week 3B Notes**](03B.md)
