--- a/weekly/03B.md
+++ b/weekly/03B.md
@@ -3,7 +3,7 @@
 ## I. Housekeeping
 - How are the Heroku "credits", [1 - Git & Heroku Setup](../exercises/1-git-and-heroku-setup.md) and [2 - Heroku Test](../exercises/2-heroku-test.md) coming along?
 - Let's check out the Slack channels
-- Now posted -> [Partial Practice Quiz #1 Key](../assessment)
+- Now posted -> [Practice Quiz #1 - Partial Key](../assessment)
 
 ---
 
