--- a/weekly/03B.md
+++ b/weekly/03B.md
@@ -11,7 +11,7 @@
 - CommonJS modules
   - https://nodejs.org/api/modules.html#modules-commonjs-modules
   - https://blog.logrocket.com/commonjs-vs-es-modules-node-js
-- Automatic server re-booting on file chnages:
+- Automatic server re-booting on file changes:
   - [nodemon](https://www.npmjs.com/package/nodemon)
 
 ---
