--- a/weekly/03B.md
+++ b/weekly/03B.md
@@ -16,8 +16,8 @@
 
 ---
 
-## III. HW: *Simple HTTP Server*
-- See myCourses Content/Assignments for the PDF
+## III. Simple HTTP Server
+- [HW - Simple HTTP Server](../exercises/3-simple-http-server.md)
 
 ---
 ---
