--- a/weekly/03B.md
+++ b/weekly/03B.md
@@ -17,7 +17,7 @@
 ---
 
 ## III. Simple HTTP Server
-- [HW - Simple HTTP Server](../exercises/3-simple-http-server.md)
+- [3 - *HW - Simple HTTP Server*](../exercises/3-simple-http-server.md)
 
 ---
 ---
