--- a/weekly/03B.md
+++ b/weekly/03B.md
@@ -2,7 +2,7 @@
 
 ## I. Housekeeping
 - How are the Heroku "credits", [1 - Git & Heroku Setup](../exercises/1-git-and-heroku-setup.md) and [2 - Heroku Test](../exercises/2-heroku-test.md) coming along?
-- Let's check out the Slack channels
+- Let's check out the 430 Slack channels
 - Now posted -> [Practice Quiz #1 - Partial Key](../assessment)
 
 ---
