--- a/weekly/03B.md
+++ b/weekly/03B.md
@@ -24,4 +24,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 3A Notes**](03A.md)  |  [**IGME-430 Home**](../) | Week 4 Notes
+|   [**Week 3A Notes**](03A.md)  |  [**IGME-430 Home**](../) | [**Week 4A Notes**](04A.md)
