--- a/weekly/04A.md
+++ b/weekly/04A.md
@@ -16,4 +16,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 3B Notes**](03B.md)  |  [**IGME-430 Home**](../) | Week 4B Notes
+|   [**Week 3B Notes**](03B.md)  |  [**IGME-430 Home**](../) | [**Week 4B Notes**](04B.md)
