--- a/weekly/04B.md
+++ b/weekly/04B.md
@@ -2,7 +2,7 @@
 
 # I. New Stuff
 - [ 5 - Streaming Media HW](../exercises/5-streaming-media.md)
-- ***HW: HTTP API Worksheet:***
+- **HW: *HTTP API Worksheet:***
   - See myCourses dropbox for instructions
   - Much of this is review - we've already seen HTTP *methods* and HTTP *status codes* when we worked with npm's `json-server`
   - Here are the links to the referenced articles:
