--- a/weekly/04B.md
+++ b/weekly/04B.md
@@ -16,4 +16,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 4A Notes**](04A.md)  |  [**IGME-430 Home**](../) | Week 5A Notes
+|   [**Week 4A Notes**](04A.md)  |  [**IGME-430 Home**](../) | [**Week 5A Notes**](05A.md)
