--- a/weekly/05A.md
+++ b/weekly/05A.md
@@ -12,6 +12,11 @@
 - [8 - Passing params to `express`](../exercises/8-passing-params-in-express.md)
 
 ---
+
+## III. Project 1 Preview
+- [Project 1 (DRAFT)](../projects/project-1.md)
+
+---
 ---
 
 | <-- Previous Unit | Home | Next Unit -->
