--- a/weekly/05A.md
+++ b/weekly/05A.md
@@ -2,7 +2,7 @@
 
 ## I. Old Stuff
 - [ 5 - Streaming Media HW](../exercises/5-streaming-media.md)
-- **HW: *HTTP API Worksheet:***
+- **HW: *HTTP API Worksheet***
  
 ---
 
