--- a/weekly/05A.md
+++ b/weekly/05A.md
@@ -7,10 +7,11 @@
 ---
 
 ## II. Express
-- [6 - Intro to `express`](../exercises/6-intro-to-express.md)
-- [7 - `express` Routing](../exercises/7-express-routing.md)
-- [8 - Passing params to `express`](../exercises/8-passing-params-in-express.md)
-- [9 - Putting our project on Heroku](../exercises/9-putting-project-on-heroku.md)
+- "Start" code and files? Nope!
+  - [6 - Intro to `express`](../exercises/6-intro-to-express.md)
+  - [7 - `express` Routing](../exercises/7-express-routing.md)
+  - [8 - Passing params to `express`](../exercises/8-passing-params-in-express.md)
+  - [9 - Putting our project on Heroku](../exercises/9-putting-project-on-heroku.md)
 
 ---
 
