--- a/weekly/05A.md
+++ b/weekly/05A.md
@@ -24,4 +24,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 4B Notes**](04B.md)  |  [**IGME-430 Home**](../) | Week 5B Notes
+|   [**Week 4B Notes**](04B.md)  |  [**IGME-430 Home**](../) | [**Week 5B Notes**](05B.md)
