--- a/weekly/05B.md
+++ b/weekly/05B.md
@@ -1,5 +1,22 @@
 # Week 5B
 
-
-
+## I. Review
+- [6 - Intro to `express`](../exercises/6-intro-to-express.md)
 - [API Design Notes](../concepts/api-design.md)
+
+---
+
+## II. Express
+- "Start" code and files? Nope!
+  
+  - [7 - `express` Routing](../exercises/7-express-routing.md) - *due: Tuesday 3PM*
+  - [8 - Passing params to `express`](../exercises/8-passing-params-in-express.md) - *due: Tuesday 3PM*
+  - [9 - Putting our project on Heroku](../exercises/9-putting-project-on-heroku.md)
+
+
+---
+---
+
+| <-- Previous Unit | Home | Next Unit -->
+| --- | --- | --- 
+|   [**Week 5A Notes**](05A.md)  |  [**IGME-430 Home**](../) | Week 6A Notes
