--- a/weekly/05B.md
+++ b/weekly/05B.md
@@ -12,6 +12,7 @@
   - [7 - `express` Routing](../exercises/7-express-routing.md) - *due: Tuesday 3PM*
   - [8 - Passing params to `express`](../exercises/8-passing-params-in-express.md) - *due: Tuesday 3PM*
   - [9 - Putting our project on Heroku](../exercises/9-putting-project-on-heroku.md)
+  - [10 - `POST`ing data to express](../exercises/10-express-posting-data.md)
 
 
 ---
