--- a/weekly/05B.md
+++ b/weekly/05B.md
@@ -10,7 +10,7 @@
 - "Start" code and files? Nope!
   - [7 - `express` Routing](../exercises/7-express-routing.md) - *due: Tuesday 3PM*
   - [8 - Passing params to `express`](../exercises/8-passing-params-in-express.md) - *due: Tuesday 3PM*
-  - [9 - Putting our project on Heroku](../exercises/9-putting-project-on-heroku.md)
+  - [9 - Putting our project on Heroku](../exercises/9-putting-project-on-heroku.md)  - *I'm not collecting, but go ahead and do this*
   - [10 - `POST`ing data to express](../exercises/10-express-posting-data.md)
 
 
