--- a/weekly/05B.md
+++ b/weekly/05B.md
@@ -12,7 +12,15 @@
   - [8 - Passing params to `express`](../exercises/8-passing-params-in-express.md) - *due: Tuesday 3PM*
   - [9 - Putting our project on Heroku](../exercises/9-putting-project-on-heroku.md)  - *I'm not collecting, but go ahead and do this*
   - [10 - `POST`ing data to express](../exercises/10-express-posting-data.md)
+    - Week 6 - HTML forms, `application/json` encoding, `fetch()` for POSTing
+  - 11 - More `POST`ing data
+    - Week-6 - "thin client"/"old school" HTML forms, `application/x-www-form-urlencoded` encoding
 
+---
+
+## III. Project 1 Preview
+- Basically, make your own version of `json-server` with a data file, and support `GET`, `POST`, `PUT`, `DELETE`
+- [Project 1 (DRAFT)](../projects/project-1.md)
 
 ---
 ---
