--- a/weekly/05B.md
+++ b/weekly/05B.md
@@ -19,7 +19,7 @@
 ---
 
 ## III. Project 1 Preview
-- Basically, make your own version of `json-server` with a data file, and support `GET`, `POST`, `PUT`, `DELETE`
+- Basically, make an API, your own version of `json-server` with a data file, and support `GET`, `POST`, `PUT`, `DELETE`
 - [Project 1 (DRAFT)](../projects/project-1.md)
 
 ---
