--- a/weekly/05B.md
+++ b/weekly/05B.md
@@ -26,4 +26,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 5A Notes**](05A.md)  |  [**IGME-430 Home**](../) | Week 6A Notes
+|   [**Week 5A Notes**](05A.md)  |  [**IGME-430 Home**](../) | [**Week 6A Notes**](06A.md)
