--- a/weekly/06A.md
+++ b/weekly/06A.md
@@ -20,4 +20,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 5A Notes**](05A.md)  |  [**IGME-430 Home**](../) | Week 6A Notes
+|   [**Week 5A Notes**](05A.md)  |  [**IGME-430 Home**](../) | Week 6B Notes
