--- a/weekly/06A.md
+++ b/weekly/06A.md
@@ -16,6 +16,12 @@
 - [14 - Finish up the hoot admin page](../exercises/14-finish-up-hoot-admin.md)
 
 ---
+
+## III. Project 1
+- [Project 1 - "Get Going!" Checkpoint (DRAFT)](../projects/project-1-checkpoint.md)
+  - We will get going on this next week - here's a preview
+
+---
 ---
 
 | <-- Previous Unit | Home | Next Unit -->
