--- a/weekly/06A.md
+++ b/weekly/06A.md
@@ -19,7 +19,7 @@
 
 ## III. Project 1
 - [Project 1 - "Get Going!" Checkpoint (DRAFT)](../projects/project-1-checkpoint.md)
-  - We will get going on this next week - here's a preview
+  - we will get going on this next week - for now here's a preview of how you'll be starting the project
 
 ---
 ---
