--- a/weekly/06A.md
+++ b/weekly/06A.md
@@ -1,4 +1,4 @@
-# Week 6A
+# Week 6A & 6B Notes
 
 ## I. Review
 - [6 - Intro to `express`](../exercises/6-intro-to-express.md)
@@ -14,6 +14,7 @@
 - [12 - `DELETE` a hoot](../exercises/12-delete-hoot-server-client.md)
 - [13 - Edit (`PUT`) a hoot](../exercises/13-put-a-hoot.md)
 - [14 - Finish up the hoot admin page](../exercises/14-finish-up-hoot-admin.md)
+- [15 - Errata & Notes](../exercises/15-notes-and-errata.md)
 
 ---
 
@@ -26,4 +27,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 5A Notes**](05A.md)  |  [**IGME-430 Home**](../) | Week 6B Notes
+|   [**Week 5A Notes**](05A.md)  |  [**IGME-430 Home**](../) | Week 7A Notes
