--- a/weekly/06A.md
+++ b/weekly/06A.md
@@ -14,7 +14,7 @@
 - [12 - `DELETE` a hoot](../exercises/12-delete-hoot-server-client.md)
 - [13 - Edit (`PUT`) a hoot](../exercises/13-put-a-hoot.md)
 - [14 - Finish up the hoot admin page](../exercises/14-finish-up-hoot-admin.md)
-- [15 - Errata & Notes](../exercises/15-notes-and-errata.md)
+- [15 - Notes & Errata](../exercises/15-notes-and-errata.md)
 
 ---
 
