--- a/weekly/06A.md
+++ b/weekly/06A.md
@@ -20,7 +20,8 @@
 
 ## III. Project 1
 - [Project 1 - "Get Going!" Checkpoint](../projects/project-1-checkpoint.md)
-  - we will get going on this next week - for now here's a preview of how you'll be starting the project
+  - this checkpoint is due in a week
+  - it won't take that long to do, but you should start thinking about which dataset you want to use
 
 ---
 ---
