--- a/weekly/06A.md
+++ b/weekly/06A.md
@@ -28,4 +28,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 5A Notes**](05A.md)  |  [**IGME-430 Home**](../) | Week 7A Notes
+|   [**Week 5A Notes**](05A.md)  |  [**IGME-430 Home**](../) | [**Week 7 Notes**](07.md)
