--- a/weekly/07.md
+++ b/weekly/07.md
@@ -1,11 +1,17 @@
 # Week 7 Notes
 
-# I. Project 1
+## I. Topics
+- For today's demos, as you code along, use the most recent working version  of "HW Hoot Admin"
+- [Express and responding to HEAD requests](../projects/p1-express-HEAD.md)
+- [HTTP `Accept` headers and XML](../projects/p1-accept-header-xml.md) - it covers:
+  - `Accept` request headers
+  - Sending XML from a web server
+  - Receiving and parsing XML on the client side
 
-## II. Topics
-- HTTP `HEAD` requests
-- `Accept` Headers
-- XML responses
+---
+
+## II. Project 1
+
 
 ---
 ---
