--- a/weekly/07.md
+++ b/weekly/07.md
@@ -1,6 +1,6 @@
 # Week 7 Notes
 
-## I. Topics
+## I. Topics (these are needed for Project 1!)
 - For today's demos, as you code along, use the most recent working version  of "HW Hoot Admin"
 - [Express and responding to HEAD requests](../projects/p1-express-HEAD.md)
 - [HTTP `Accept` headers and XML](../projects/p1-accept-header-xml.md) - it covers:
