--- a/weekly/07.md
+++ b/weekly/07.md
@@ -12,7 +12,7 @@
 ---
 
 ## II. Project 1
-[Project 1 - "Get Going!" Checkpoint](../projects/project-1-checkpoint.md)
+- [Project 1 - "Get Going!" Checkpoint](../projects/project-1-checkpoint.md)
 - [Project 1 Requirements](../projects/project-1.md)
 
 ---
