--- a/weekly/07.md
+++ b/weekly/07.md
@@ -20,4 +20,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 6 Notes**](06A.md)  |  [**IGME-430 Home**](../) | Week 8 Notes
+|   [**Week 6 Notes**](06A.md)  |  [**IGME-430 Home**](../) | [**Week 8 Notes**](08.md)
