--- a/weekly/08.md
+++ b/weekly/08.md
@@ -2,7 +2,7 @@
 
 ## I. "Old School" `<form>`s - `GET` and `POST` with no JS!
 
-- [16 - "Old School" <form>s](../exercises/16-old-school-forms.md)
+- [16 - "Old School" `<form>`s](../exercises/16-old-school-forms.md)
 
 ---
 
