--- a/weekly/08.md
+++ b/weekly/08.md
@@ -3,6 +3,7 @@
 ## I. "Old School" `<form>`s - `GET` and `POST` with no JS!
 
 - [16 - "Old School" `<form>`s](../exercises/16-old-school-forms.md)
+- Note: You don't need use this on Project 1, but the covered concepts are important
 
 ---
 
