--- a/weekly/08.md
+++ b/weekly/08.md
@@ -22,4 +22,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 7 Notes**](07.md)  |  [**IGME-430 Home**](../) | Week 9 Notes
+|   [**Week 7 Notes**](07.md)  |  [**IGME-430 Home**](../) | [**Week 9A Notes**](09A.md)
