--- a/weekly/09A.md
+++ b/weekly/09A.md
@@ -1,6 +1,7 @@
 # Week 9A Notes
 
 ## I. Project 1
+- See **Project 1 - "Back end" checkpoint** in myCourses
 - Work on [Project 1 Requirements](../projects/project-1.md)
 
 ---
