--- a/weekly/08.md
+++ b/weekly/08.md
@@ -15,6 +15,7 @@
 ---
 
 ## III. Project 1
+- See: ***Project 1 - "Back end" checkpoint*** dropbox in myCourses
 - [Project 1 Requirements](../projects/project-1.md)
 
 ---
