--- a/weekly/09A.md
+++ b/weekly/09A.md
@@ -5,6 +5,20 @@
 - Work on [Project 1 Requirements](../projects/project-1.md)
 
 ---
+
+## II. Errata
+- A small fix to [Express and responding to HEAD requests](../projects/p1-express-HEAD.md#iii-hoots-example)
+  - EDIT: replace `const { length } = JSON.stringify(hoots);` (line 81) with:
+    - `const length = Buffer.byteLength(JSON.stringify(hoots), 'utf8');`
+    - ... in this instance, both lines will return the same number ...
+    - ... but `Buffer.byteLength()` will work properly with multi-byte encoded strings
+   
+---
+
+## III. Work Day
+- Finish up Project 1
+
+---
 ---
 
 | <-- Previous Unit | Home | Next Unit -->
