--- a/weekly/09A.md
+++ b/weekly/09A.md
@@ -23,4 +23,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 8 Notes**](08.md)  |  [**IGME-430 Home**](../) | Week 9B Notes
+|   [**Week 8 Notes**](08.md)  |  [**IGME-430 Home**](../) | [**Week 9B Notes**](09B.md)
