--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -10,9 +10,16 @@
 
 ---
 
-## III. Today
+## III. Debugging
 - Debugging Demo
   - start files are [here](https://github.com/IGM-RichMedia-at-RIT/debugging-demo) - just download the ZIP and `npm i` / `npm start`, you don't need to fork this repo
+
+---
+
+## IV. Design Pattern - MVC
+- See MVC and HTTP Server Design slide in myCourses - focus on MVC section
+- [Demo "start code" for `simple-mvc-controllers`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-controllers) - just download the ZIP and `npm i` / `npm start`, you don't need to fork this repo
+
 
 ---
 ---
