--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -17,8 +17,8 @@
 ---
 
 ## IV. Design Pattern - MVC
-- See MVC and HTTP Server Design slide in myCourses - focus on MVC section
-- [Demo "start code" for `simple-mvc-controllers`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-controllers) - just download the ZIP and `npm i` / `npm start`, you don't need to fork this repo
+- See MVC and HTTP Server Design slides in myCourses - focus on MVC section
+- [Demo "start code" for `simple-mvc-controllers`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-controllers) - just download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 
 
 ---
