--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -16,10 +16,35 @@
 
 ---
 
-## IV. Design Pattern - MVC
-- See MVC and HTTP Server Design slides in myCourses - focus on MVC section
+## IV. Express Review
 - [Demo "start code" for `simple-mvc-controllers`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-controllers) - just download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
+- Here's some code to get you started in **app.js**
 
+```js
+const app = express();
+app.use('/assets', express.static(path.resolve(`${__dirname}/../client/`)));
+app.use(compression());
+app.use(express.urlencoded({ extended: true }));
+app.use(favicon(`${__dirname}/../client/img/favicon.png`));
+router(app);
+
+app.listen(port, (err) => {
+  if(err){
+    throw err;
+  }
+  console.log(`Listening on port ${port}`);
+});
+```
+
+- Some new things in this **app.js**:
+  - `app.use(compression())`
+    - middleware for express, it compresses most files before they are sent to a client
+    - https://expressjs.com/en/resources/middleware/compression.html
+  - `app.use(express.urlencoded({ extended: true }));`
+    - `extended: true` makes it use the [qs package](https://www.npmjs.com/package/qs) for nested query strings
+  - `app.use(favicon(`${__dirname}/../client/img/favicon.ico`));`
+    - to display a favicon
+    - add this to HTML `<link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">`
 
 ---
 ---
