--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -43,8 +43,8 @@ app.listen(port, (err) => {
   - `app.use(express.urlencoded({ extended: true }));`
     - `extended: true` makes it use the [qs package](https://www.npmjs.com/package/qs) for nested query strings
   - `app.use(favicon(`${__dirname}/../client/img/favicon.ico`));`
-    - to display a favicon
-    - add this to HTML `<link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">`
+    - to server a default favicon - npm docs here: https://www.npmjs.com/package/serve-favicon
+    - for other favicons, add this to HTML `<link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">`
 
 ---
 ---
