--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -45,7 +45,16 @@ app.listen(port, (err) => {
   - `app.use(favicon(`${__dirname}/../client/img/favicon.ico`));`
     - to server a default favicon - npm docs here: https://www.npmjs.com/package/serve-favicon
     - for other favicons, add this to HTML `<link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">`
-
+    - SO post on this - https://stackoverflow.com/questions/15463199/how-to-set-custom-favicon-in-express
+  - `router(app);`
+    - here we are creating a single instance of `express()` and sending it over to our router
+    - this will scale better than how we did it on project 1
+- **router.js**
+  - add `GET` routes from *specific*, to more *general*
+  - add `GET` `/page1` and `/page2` routes that load in `controllers.page1` and `controllers.page2`
+  - add a `GET` `/` route that loads `controllers.index`
+  - add a `GET` "wildcard" route - `/*`  - that loads `controllers.notFound`
+`
 ---
 ---
 
