--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -12,12 +12,12 @@
 
 ## III. Debugging
 - Debugging Demo
-  - start files are [here](https://github.com/IGM-RichMedia-at-RIT/debugging-demo) - just download the ZIP and `npm i` / `npm start`, you don't need to fork this repo
+  - start files are [here](https://github.com/IGM-RichMedia-at-RIT/debugging-demo) - just `git clone` or download the ZIP and `npm i` / `npm start`, you don't need to fork this repo
 
 ---
 
 ## IV. Express Review
-- [Demo "start code" for `simple-mvc-controllers`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-controllers) - just download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
+- [Demo "start code" for `simple-mvc-controllers`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-controllers) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 - Here's some code to get you started in **app.js**
 
 ```js
