--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -41,6 +41,7 @@ app.listen(port, (err) => {
     - middleware for express, it compresses most files before they are sent to a client
     - https://expressjs.com/en/resources/middleware/compression.html
   - `app.use(express.urlencoded({ extended: true }));`
+    - allows us to easily parse "old school" form data that is urlencoded
     - `extended: true` makes it use the [qs package](https://www.npmjs.com/package/qs) for nested query strings
   - `app.use(favicon(`${__dirname}/../client/img/favicon.ico`));`
     - to server a default favicon - npm docs here: https://www.npmjs.com/package/serve-favicon
@@ -54,7 +55,42 @@ app.listen(port, (err) => {
   - add `GET` `/page1` and `/page2` routes that load in `controllers.page1` and `controllers.page2`
   - add a `GET` `/` route that loads `controllers.index`
   - add a `GET` "wildcard" route - `/*`  - that loads `controllers.notFound`
-`
+- **controller/index.js**
+  - here's `notFound`
+
+```js
+const notFound = (req, res) => {
+  return res.status(404).sendFile(path.resolve(`${__dirname}/../../views/notFound.html`));
+};
+```
+
+- And you'll need to add `module.exports = ...`
+
+---
+
+- Now test it, you'll see:
+  - all the pages work
+  - the 404 page works
+  - get and post (the forms) for name do not work - we have no handlers
+  - the image works, because of static hosting in **app.js**
+
+---
+
+- **controllers/index.js**
+  - implement `getName` - which returns `name`
+  - implement `setName` - which grabs `req.body.firstname` and `req.body.lastname` that the form sent over
+- **router.js**
+  - add a `GET` route for `/getName`
+  - add a `POST` route for `/setName`
+
+ ---
+
+ - Test it again - `/getName` and `/setName` should now work
+
+---
+
+## V. Server-side rendering with handlebars
+  
 ---
 ---
 
