--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -89,7 +89,7 @@ const notFound = (req, res) => {
 
 ---
 
-## V. Server-side rendering with handlebars
+## V. Server-side rendering with Handlebars templating engine
   
 ---
 ---
