--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -89,7 +89,8 @@ const notFound = (req, res) => {
 
 ---
 
-## V. Server-side rendering with Handlebars templating engine
+## V. Server-side rendering with the Handlebars templating engine
+- Next time!
   
 ---
 ---
