--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -91,6 +91,7 @@ const notFound = (req, res) => {
 
 ## V. Server-side rendering with the Handlebars templating engine
 - Next time!
+- [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates)
   
 ---
 ---
