--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -1,6 +1,16 @@
 # Week 10A Notes
 
-## I. Server-side rendering with the Handlebars templating engine
+## I. About Handlerbars
+- Handlebars is a simple *templating* language.
+- It uses a template and an input object to generate HTML or other text formats. Handlebars templates look like regular text with embedded Handlebars expressions.
+- Reference:
+  - https://handlebarsjs.com
+  - https://www.npmjs.com/package/express-handlebars
+  - https://github.com/ericf/express-handlebars
+
+---
+
+## II. Server-side rendering with the Handlebars templating engine
 - [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates)
   
 ---
