--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -2,7 +2,12 @@
 
 ## I. About Handlerbars
 - Handlebars is a simple *templating* language.
-- It uses a template and an input object to generate HTML or other text formats. Handlebars templates look like regular text with embedded Handlebars expressions.
+- It uses a *template* and an *input object* to generate HTML or other text formats. Handlebars templates look like regular text with embedded Handlebars expressions:
+
+```js
+<p>{{firstname}} {{lastname}}</p>
+```
+
 - Reference:
   - https://handlebarsjs.com
   - https://www.npmjs.com/package/express-handlebars
@@ -10,9 +15,23 @@
 
 ---
 
-## II. Server-side rendering with the Handlebars templating engine
-- [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates)
-  
+## II. Server-side rendering with Handlebars
+- [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates) - just git clone or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
+- Here's some code to get you started in **app.js**
+
+```js
+// import handlebars for express
+const expressHandlebars = require('express-handlebars');
+
+// Below goes AFTER app.use(express.json());
+
+app.engine('handlebars', expressHandlebars.engine({
+  defaultLayout: '',
+}));
+app.set('view engine', 'handlebars');
+app.set('views', `${__dirname}/../views`);
+```
+ 
 ---
 ---
 
