--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -89,6 +89,10 @@ const notFound = (req, res) => {
 
 ---
 
+ - BTW - how can we "uninstall" packages we no longer need - like [**body-parser**](https://www.npmjs.com/package/body-parser)?
+
+---
+
 ## V. Next time
 - Server-side rendering with the Handlebars templating engine
 
