--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -71,7 +71,7 @@ const notFound = (req, res) => {
 - Now test it, you'll see:
   - all the pages work
   - the 404 page works
-  - get and post (the forms) for name do not work - we have no handlers
+  - get and post (the form) for name do not work - we have no handlers
   - the image works, because of static hosting in **app.js**
 
 ---
