--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -43,7 +43,7 @@ app.listen(port, (err) => {
   - `app.use(express.urlencoded({ extended: true }));`
     - allows us to easily parse "old school" form data that is urlencoded
     - `extended: true` makes it use the [qs package](https://www.npmjs.com/package/qs) for nested query strings
-  - `app.use(favicon(/`${__dirname}/../client/img/favicon.ico/`));`
+  - `app.use(favicon(`` ` ``${__dirname}/../client/img/favicon.ico`` ` ``));`
     - to server a default favicon - npm docs here: https://www.npmjs.com/package/serve-favicon
     - for other favicons, add this to HTML `<link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">`
     - SO post on this - https://stackoverflow.com/questions/15463199/how-to-set-custom-favicon-in-express
