--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -31,6 +31,12 @@ app.engine('handlebars', expressHandlebars.engine({
 app.set('view engine', 'handlebars');
 app.set('views', `${__dirname}/../views`);
 ```
+
+---
+
+## III. More rendering with handlebars - loops & conditionals
+- [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api)
+
  
 ---
 ---
