--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -35,7 +35,7 @@ app.set('views', `${__dirname}/../views`);
 ---
 
 ## III. More rendering with handlebars - loops & conditionals
-- [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api)
+- [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api) - - just git clone or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 
  
 ---
