--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -16,7 +16,7 @@
 ---
 
 ## II. Server-side rendering with Handlebars
-- [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates) - just git clone or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
+- [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 - Here's some code to get you started in **app.js**
 
 ```js
@@ -35,7 +35,7 @@ app.set('views', `${__dirname}/../views`);
 ---
 
 ## III. More rendering with handlebars - loops & conditionals
-- [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api) - - just git clone or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
+- [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 
  
 ---
