--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -89,12 +89,13 @@ const notFound = (req, res) => {
 
 ---
 
- - BTW - how can we "uninstall" packages we no longer need - like [**body-parser**](https://www.npmjs.com/package/body-parser)?
+ - BTW - how can we completely "uninstall" packages we no longer need - like [**body-parser**](https://www.npmjs.com/package/body-parser)?
 
 ---
 
-## V. Next time
-- Server-side rendering with the Handlebars templating engine
+## V. Next week
+- 10A - Server-side rendering with the Handlebars templating engine
+- 10B - MongoDB! See the **MongoDBCloudSetup** PDF in myCourses Week-10, and [How to use MongoDb Compass](https://www.mongodb.com/docs/compass/current/)
 
 ---
 ---
